# TP-Advanced-C-CPP

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  main.c
.github/workflows/: ci.yml
common/: common.c  common.h
parallel/: parallel.c  parallel.h
project/: CMakeLists.txt  main.c
project/common/: common.c  common.h
project/include/: errors_and_defines.h  group_of_networks.h  server.h
project/parallel/: parallel.c  parallel.h
project/samples/: default.tst  gen.py  sample1.txt
project/sequential/: sequential.c
project/src/: group_of_networks.c  main.c  server.c
project/tests/: test_common.cpp  test_parallel.cpp  test_sequential.cpp
project/tst/: test.cpp
sequential/: sequential.c  sequential.h
